# image-date-tagger

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  app.py  docker-compose.yml  requirements.txt  start.sh  stop.sh
src/: main.rs
static/: app.js  style.css
templates/: index.html
